[tool.poetry]
name = "async-minecraft-chat-reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.scripts]
space-game = "chat_reader:main"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = ">=0.8.0"
ConfigArgParse = ">=1.5.3"
retry = ">=0.9.2"
asyncinit = ">=0.2.4"
async-timeout = ">=4.0.2"
anyio = ">=3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "3.9.0"
flakehell = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

