[tool.poetry]
name = "minecraft_chat"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
minecraft_chat = "minecraft_chat.main:run_main_loop"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = ">=0.8.0"
ConfigArgParse = ">=1.5.3"
retry = ">=0.9.2"
asyncinit = ">=0.2.4"
async-timeout = ">=4.0.2"
anyio = ">=3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "3.9.0"
flakehell = "^0.9.0"
autoflake8 = "^0.4.0"
bandit = "^1.7.4"
yesqa = "^1.4.0"
isort = "^5.10.1"
autoflake = "^1.5.3"

[tool.flakehell.plugins]
"*" = ["+*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
